--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           branch: "cla"
       - if: |
+          github.event_name == 'pull_request' ||
           github.event.comment.body == 'recheckcla' ||
           github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA'
         uses: cla-assistant/github-action@v1.4.2-alpha
