--- a/.github/workflows/yarn.yml
+++ b/.github/workflows/yarn.yml
@@ -43,5 +43,5 @@ jobs:
           yarn run fix
           git config --local user.name 'github-actions[bot]'
           git config --local user.email 'github-actions[bot]@users.noreply.github.com'
-          git commit -am "[sentrei-auto-fix]"
+          git commit -am "chore: [sentrei-auto-fix]"
           git push
