perf: ⚡️ ini color labels

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,34 +1,28 @@
-- name: "design"
-  color: "0366d6"
+- name: "backend"
+  color: "0075ca"
   description: ""
-- name: "devops"
-  color: "0366d6"
+- name: "bug"
+  color: "d73a4a"
   description: ""
 - name: "Epic"
   color: "3E4B9E"
   description: ""
-- name: "github"
-  color: "0366d6"
-  description: ""
-- name: "history"
-  color: "0366d6"
-  description: ""
-- name: "legal"
-  color: "0366d6"
+- name: "frontend"
+  color: "a2eeef"
   description: ""
 - name: "infrastructure"
-  color: "0366d6"
+  color: "008672"
+  description: ""
+- name: "good-first-issue"
+  color: "7057ff"
+  description: ""
+- name: "ready-to-merge"
+  color: "d876e3"
   description: ""
 - name: "packages/blog"
   color: "0366d6"
   description: ""
 - name: "packages/common"
-  color: "0366d6"
-  description: ""
-- name: "packages/docs"
-  color: "0366d6"
-  description: ""
-- name: "packages/fastlane"
   color: "0366d6"
   description: ""
 - name: "packages/pioneer"
@@ -47,11 +41,5 @@
   color: "0366d6"
   description: ""
 - name: "packages/web"
-  color: "0366d6"
-  description: ""
-- name: "ready-to-merge"
-  color: "0366d6"
-  description: ""
-- name: "sentrei-auto-pr"
   color: "0366d6"
   description: ""
