--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -19,6 +19,15 @@
 - name: "ready-to-merge"
   color: "d876e3"
   description: ""
+- name: "sprint:early"
+  color: "44FFD2"
+  description: ""
+- name: "sprint:middle"
+  color: "87F6FF"
+  description: ""
+- name: "sprint:late"
+  color: "DAF5FF"
+  description: ""
 - name: "packages/blog"
   color: "0366d6"
   description: ""
