--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -35,7 +35,9 @@
     "swap:alpha": "cp alpha.firebase.json firebase.json",
     "swap:beta": "cp beta.firebase.json firebase.json",
     "swap:main": "cp main.firebase.json firebase.json",
-    "test": "start-server-and-test start http://localhost:3000 cypress"
+    "test": "start-server-and-test start http://localhost:3000 cypress",
+    "typescript": "cd ../.. && yarn run typescript",
+    "watch": "cd ../.. && yarn run watch"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
