fix: 🐛 ini nohoist for yarn workspaces

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "license": "GPL-3.0-only",
   "author": "Shun Kakinoki",
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": "packages/*",
+    "nohoist": "next"
+  },
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build --stream --scope={@sentrei/blog,@sentrei/pioneer,@sentrei/typedoc}",
