--- a/packages/pioneer/package.json
+++ b/packages/pioneer/package.json
@@ -17,16 +17,18 @@
     "pioneer": "firebase use main && yarn run deploy"
   },
   "dependencies": {
-    "@vssue/vuepress-plugin-vssue": "^1.4.3",
-    "@vuepress/plugin-active-header-links": "^1.5.3",
-    "@vuepress/plugin-back-to-top": "^1.3.1",
-    "@vuepress/plugin-google-analytics": "^1.5.3",
-    "@vuepress/plugin-nprogress": "^1.4.1",
-    "@vuepress/plugin-search": "^1.4.1",
+    "@vssue/vuepress-plugin-vssue": "^1.4.6",
+    "@vuepress/plugin-active-header-links": "^1.5.4",
+    "@vuepress/plugin-back-to-top": "^1.5.4",
+    "@vuepress/plugin-google-analytics": "^1.5.4",
+    "@vuepress/plugin-nprogress": "^1.5.4",
+    "@vuepress/plugin-search": "^1.5.4",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12",
     "vuepress": "^1.5.4",
     "vuepress-plugin-rss": "^2.0.0",
     "vuepress-plugin-sitemap": "^2.3.1",
-    "vuepress-theme-yuu": "^2.2.1"
+    "vuepress-theme-yuu": "^2.3.0"
   },
   "publishConfig": {
     "access": "public"
