--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build --stream --scope={@sentrei/blog,@sentrei/pioneer,@sentrei/typedoc}",
     "clean": "lerna clean -y",
-    "depcheck": "lerna exec --stream --no-bail 'yarn run depcheck .' --scope={@sentrei/common,@sentrei/ui,@sentrei/video,@sentrei/web}",
+    "depcheck": "lerna exec --stream --no-bail 'yarn run depcheck .' --scope={@sentrei/common,@sentrei/ui,@sentrei/video,@sentrei/web} || true",
     "env:set:all": "yarn run env:set:alpha && yarn run env:set:beta && yarn run env:set:main",
     "env:set:alpha": "deploy-env development",
     "env:set:beta": "deploy-env preview",
