--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,6 +52,7 @@
     "@types/react-scroll": "^1.5.5",
     "@types/styled-components": "^5.1.2",
     "@types/yup": "^0.29.0",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "emoji-mart": "^3.0.0",
@@ -61,6 +62,7 @@
     "next-translate": "^0.17.2-canary.6",
     "react": "^16.13.1",
     "react-avatar": "^3.9.7",
+    "react-chartjs-2": "^2.10.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.5.1",
