perf: ⚡️ ini ui gha

--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -8,6 +8,7 @@ on:
       - ".github/workflows/ui.yml"
       - "packages/@types/**"
       - "packages/common/**"
+      - "packages/ui/**"
       - "packages/video/**"
 jobs:
   ui:
