--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ updates:
       prefix: "perf"
       prefix-development: "chore"
       include: "scope"
+    open-pull-requests-limit: 0
   - package-ecosystem: "docker"
     directory: "/packages/web"
     schedule:
@@ -18,6 +19,7 @@ updates:
       prefix: "perf"
       prefix-development: "chore"
       include: "scope"
+    open-pull-requests-limit: 0
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
@@ -27,6 +29,7 @@ updates:
       prefix: "perf"
       prefix-development: "chore"
       include: "scope"
+    open-pull-requests-limit: 0
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
@@ -37,6 +40,7 @@ updates:
       prefix-development: "chore"
       include: "scope"
     versioning-strategy: increase
+    open-pull-requests-limit: 0
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
@@ -46,3 +50,4 @@ updates:
       prefix: "perf"
       prefix-development: "chore"
       include: "scope"
+    open-pull-requests-limit: 0
