feat: 🎸 ini space billing customer portal

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -40,7 +40,8 @@
     "next": "^9.5.2",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "stripe": "^8.91.0"
   },
   "publishConfig": {
     "access": "public"
