--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -77,6 +77,7 @@
     "react-use-gesture": "^7.0.15",
     "react-useanimations": "^2.0.5",
     "recoil": "^0.0.10",
+    "stripe": "^8.91.0",
     "styled-components": "^5.1.0",
     "use-dark-mode": "^2.3.1",
     "yup": "^0.29.0"
