--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -58,6 +58,7 @@
     "lqip-loader": "^2.2.0",
     "next": "^9.5.2",
     "next-compose-plugins": "^2.2.0",
+    "next-google-fonts": "^1.2.1",
     "next-images": "^1.4.1",
     "next-optimized-images": "^3.0.0-canary.10",
     "next-plugin-bundle-stats": "^2.2.0",
