--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -59,6 +59,7 @@
     "firebase": "^7.19.0",
     "framer-motion": "^2.2.0",
     "next": "^9.5.2",
+    "next-seo": "^4.7.3",
     "next-translate": "^0.17.2-canary.6",
     "react": "^16.13.1",
     "react-avatar": "^3.9.7",
