--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -69,6 +69,7 @@
     "react-color": "^2.18.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-easy-crop": "^3.1.1",
     "react-hook-form": "^6.7.0",
     "react-intersection-observer": "^8.26.2",
     "react-parallax-tilt": "^1.4.53",
