--- a/packages/@types/package.json
+++ b/packages/@types/package.json
@@ -31,7 +31,8 @@
     "firebase": "^7.19.0",
     "firebase-admin": "^9.0.0",
     "firebase-functions": "^3.7.0",
-    "firebase-tools": "^8.6.0"
+    "firebase-tools": "^8.6.0",
+    "stripe": "^8.92.0"
   },
   "publishConfig": {
     "access": "public"
