--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@sentrei/types": "^1.21.0-beta.1",
+    "@sentrei/types": "beta",
     "@sentry/browser": "^5.21.1",
     "@types/lodash.get": "^4.4.6",
     "@types/nprogress": "^0.2.0",
