--- a/packages/typedoc/package.json
+++ b/packages/typedoc/package.json
@@ -11,7 +11,7 @@
   "author": "Shun Kakinoki",
   "scripts": {
     "alpha": "yarn run swap:alpha && firebase use alpha && yarn run deploy",
-    "beta": "yarn run swap:beta && firebase use beta && yarn run deploy",
+    "^1.35.0-beta.1": "yarn run swap:beta && firebase use beta && yarn run deploy",
     "build": "typedoc",
     "deploy": "yarn run deploy:typedoc",
     "deploy:typedoc": "firebase deploy --only hosting:typedoc",
