--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "alpha": "yarn run alpha:local && yarn run deploy",
     "alpha:local": "yarn run swap:alpha && firebase use alpha",
-    "beta": "yarn run beta:local && yarn run deploy",
+    "^1.35.0-beta.1": "yarn run beta:local && yarn run deploy",
     "beta:local": "yarn run swap:beta && firebase use beta",
     "build": "next-translate && next build",
     "build:analyze": "cross-env ANALYZE=true yarn run build",
@@ -42,9 +42,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@next/bundle-analyzer": "^9.5.2",
-    "@sentrei/common": "beta",
-    "@sentrei/types": "beta",
-    "@sentrei/ui": "beta",
+    "@sentrei/common": "^1.35.0-beta.1",
+    "@sentrei/types": "^1.35.0-beta.1",
+    "@sentrei/ui": "^1.35.0-beta.1",
     "@sentry/webpack-plugin": "^1.12.0",
     "@types/react": "^16.9.41",
     "@zeit/next-sass": "^1.0.1",
