--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@next/bundle-analyzer": "^9.5.2",
+    "@segment/snippet": "^4.13.1",
     "@sentrei/common": "^1.35.0-beta.1",
     "@sentrei/types": "^1.35.0-beta.1",
     "@sentrei/ui": "^1.35.0-beta.1",
