--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -12,7 +12,7 @@
   },
   "github": {
     "enabled": false,
-    "autoJobCancelation": false,
+    "autoJobCancelation": true,
     "autoAlias": true,
     "silent": false
   }
