--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -31,6 +31,7 @@
     "@segment/snippet": "^4.13.1",
     "@sentrei/types": "^1.35.0-beta.1",
     "@sentry/browser": "^5.21.1",
+    "@stripe/stripe-js": "^1.9.0",
     "@types/lodash.get": "^4.4.6",
     "@types/nprogress": "^0.2.0",
     "@types/segment-analytics": "^0.0.32",
