--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -44,6 +44,7 @@
     "@sentrei/types": "^1.35.0-beta.1",
     "@sentrei/video": "^1.35.0-beta.1",
     "@sentry/browser": "^5.21.1",
+    "@stripe/stripe-js": "^1.9.0",
     "@types/classnames": "^2.2.10",
     "@types/emoji-mart": "^3.0.2",
     "@types/next": "^9.0.0",
