feat: 🎸 ini next sourcemaps

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -48,10 +48,13 @@
     "@sentrei/common": "^1.41.0-beta.1",
     "@sentrei/types": "^1.41.0-beta.1",
     "@sentrei/ui": "^1.41.0-beta.1",
-    "@sentry/webpack-plugin": "^1.12.0",
+    "@sentry/browser": "^5.15.5",
+    "@sentry/integrations": "5.20.1",
+    "@sentry/node": "^5.15.5",
+    "@sentry/webpack-plugin": "^1.11.1",
     "@types/react": "^16.9.41",
     "@zeit/next-sass": "^1.0.1",
-    "@zeit/next-source-maps": "^0.0.3",
+    "@zeit/next-source-maps": "0.0.4-canary.1",
     "babel-plugin-styled-components": "^1.10.7",
     "image-trace-loader": "^1.0.2",
     "imagemin-mozjpeg": "^9.0.0",
