--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -30,7 +30,8 @@
     "@segment/analytics.js-core": "^4.0.1",
     "@segment/snippet": "^4.13.1",
     "@sentrei/types": "^1.41.0-beta.1",
-    "@sentry/browser": "^5.21.1",
+    "@sentry/integrations": "5.20.1",
+    "@sentry/node": "^5.15.5",
     "@stripe/stripe-js": "^1.9.0",
     "@types/lodash.get": "^4.4.6",
     "@types/nprogress": "^0.2.0",
