--- a/packages/video/package.json
+++ b/packages/video/package.json
@@ -32,8 +32,8 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@primer/octicons-react": "^9.0.0",
-    "@sentrei/common": "^1.41.0-beta.1",
-    "@sentrei/types": "^1.41.0-beta.1",
+    "@sentrei/common": "^1.41.2",
+    "@sentrei/types": "^1.41.2",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.3",
     "@testing-library/react-hooks": "^3.2.1",
