--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -45,9 +45,9 @@
     "@material-ui/core": "^4.11.0",
     "@next/bundle-analyzer": "^9.5.2",
     "@segment/snippet": "^4.13.1",
-    "@sentrei/common": "^1.41.0-beta.1",
-    "@sentrei/types": "^1.41.0-beta.1",
-    "@sentrei/ui": "^1.41.0-beta.1",
+    "@sentrei/common": "^1.41.2",
+    "@sentrei/types": "^1.41.2",
+    "@sentrei/ui": "^1.41.2",
     "@sentry/webpack-plugin": "^1.12.0",
     "@types/react": "^16.9.41",
     "@zeit/next-sass": "^1.0.1",
