--- a/.github/workflows/yarn.yml
+++ b/.github/workflows/yarn.yml
@@ -43,3 +43,5 @@ jobs:
           git config --local user.email 'github-actions[bot]@users.noreply.github.com'
           git commit -am "chore: [sentrei-auto-fix]"
           git push
+      - run: |
+          yarn run build
