feat: 🎸 completely remove blog

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build": "lerna run build --stream --scope={@sentrei/blog,@sentrei/pioneer,@sentrei/typedoc}",
+    "build": "lerna run build --stream --scope={@sentrei/pioneer,@sentrei/typedoc}",
     "clean": "lerna clean -y",
     "depcheck": "lerna exec --stream --no-bail 'yarn run depcheck .' --scope={@sentrei/common,@sentrei/ui,@sentrei/video,@sentrei/web} || true",
     "env:set:all": "yarn run env:set:alpha && yarn run env:set:beta && yarn run env:set:main",
