--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -42,6 +42,7 @@
     "lodash.get": "^4.4.2",
     "mitt": "^2.1.0",
     "next": "^9.5.3",
+    "next-translate": "^0.17.2-canary.6",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
