--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -19,6 +19,9 @@
 - name: "ready-to-merge"
   color: "d876e3"
   description: ""
+- name: "roadmap"
+  color: "0088CC"
+  description: ""
 - name: "sprint:early"
   color: "44FFD2"
   description: ""
