--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -38,7 +38,7 @@ jobs:
           token: ${{ secrets.ACCESS_TOKEN }}
           ref: ${{ github.branch }}
           target_url: https://sentrei.com
-          environment: "Vercel production"
+          environment: "Vercel production main"
       - if: github.ref == 'refs/heads/main'
         timeout-minutes: 300
         uses: amondnet/vercel-action@v19.0.1+3
@@ -73,7 +73,7 @@ jobs:
           token: ${{ secrets.ACCESS_TOKEN }}
           ref: ${{ github.branch }}
           target_url: https://${{ steps.branch.outputs.branch }}.sentrei.com
-          environment: "Vercel preview"
+          environment: "Vercel preview ${{ steps.branch.outputs.branch }}"
       - if: github.ref != 'refs/heads/main'
         timeout-minutes: 300
         uses: amondnet/vercel-action@v19.0.1+3
