--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -29,7 +29,7 @@
     "@material-ui/core": "^4.11.0",
     "@segment/analytics.js-core": "^4.0.1",
     "@segment/snippet": "^4.13.1",
-    "@sentrei/types": "^1.41.2",
+    "@sentrei/types": "^1.52.1-beta.1",
     "@sentry/browser": "^5.21.1",
     "@sentry/integrations": "5.20.1",
     "@stripe/stripe-js": "^1.9.0",
