--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -45,9 +45,9 @@
     "@material-ui/core": "^4.11.0",
     "@next/bundle-analyzer": "^9.5.2",
     "@segment/snippet": "^4.13.1",
-    "@sentrei/common": "^1.41.2",
-    "@sentrei/types": "^1.41.2",
-    "@sentrei/ui": "^1.41.2",
+    "@sentrei/common": "^1.52.1-beta.1",
+    "@sentrei/types": "^1.52.1-beta.1",
+    "@sentrei/ui": "^1.52.1-beta.1",
     "@sentry/browser": "^5.15.5",
     "@sentry/integrations": "5.20.1",
     "@sentry/node": "^5.15.5",
