--- a/packages/video/package.json
+++ b/packages/video/package.json
@@ -34,6 +34,7 @@
     "@primer/octicons-react": "^9.0.0",
     "@sentrei/common": "^1.52.1-beta.1",
     "@sentrei/types": "^1.52.1-beta.1",
+    "@sentrei/ui": "^1.52.1-beta.1",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.3",
     "@testing-library/react-hooks": "^3.2.1",
