--- a/packages/video/package.json
+++ b/packages/video/package.json
@@ -40,22 +40,19 @@
     "@testing-library/react-hooks": "^3.2.1",
     "@types/d3-timer": "^1.0.9",
     "@types/fscreen": "^1.0.1",
+    "@types/jest": "^24.9.1",
     "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^12.12.26",
-    "@types/react": "^16.9.41",
+    "@types/react": "^16.9.19",
     "@types/twilio-video": "^2.7.0",
-    "clsx": "^1.1.1",
     "d3-timer": "^1.0.10",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "fscreen": "^1.0.2",
-    "is-plain-object": "^4.1.1",
-    "isomorphic-fetch": "^2.2.1",
     "lodash.throttle": "^4.1.1",
-    "react": "^16.13.1",
-    "react-test-renderer": "^16.12.0",
-    "twilio": "^3.48.2",
-    "twilio-video": "^2.7.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "twilio": "^3.39.3",
+    "twilio-video": "^2.7.1",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
