--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -22,14 +22,32 @@
 - name: "roadmap"
   color: "0088CC"
   description: ""
-- name: "sprint:early"
+- name: "day:early"
+  color: "E98980"
+  description: ""
+- name: "day:middle"
+  color: "F4B9B8"
+  description: ""
+- name: "day:late"
+  color: "EBBBB0"
+  description: ""
+- name: "week:early"
   color: "44FFD2"
   description: ""
-- name: "sprint:middle"
+- name: "week:middle"
   color: "87F6FF"
   description: ""
-- name: "sprint:late"
+- name: "week:late"
   color: "DAF5FF"
+  description: ""
+- name: "month:early"
+  color: "B4F5F0"
+  description: ""
+- name: "month:middle"
+  color: "2CEEF0"
+  description: ""
+- name: "month:late"
+  color: "0476D0"
   description: ""
 - name: "packages/common"
   color: "0366d6"
