--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -47,6 +47,7 @@
     "@sentrei/common": "^1.52.1-beta.1",
     "@sentrei/types": "^1.52.1-beta.1",
     "@sentrei/ui": "^1.52.1-beta.1",
+    "@sentrei/video": "^1.52.1-beta.1",
     "@sentry/browser": "^5.15.5",
     "@sentry/integrations": "5.20.1",
     "@sentry/node": "^5.15.5",
