--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -134,6 +134,7 @@
         "@typescript-eslint/no-explicit-any": 0,
         "@typescript-eslint/no-misused-promises": 0,
         "@typescript-eslint/no-non-null-assertion": 0,
+        "@typescript-eslint/no-shadow": 0,
         "@typescript-eslint/no-unused-expressions": 0,
         "@typescript-eslint/no-unused-vars": 0,
         "@typescript-eslint/no-var-requires": 0,
