--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -78,6 +78,7 @@
     "react-toggle-dark-mode": "^1.0.2",
     "react-useanimations": "^2.0.5",
     "recoil": "^0.0.10",
+    "stripe": "^8.94.0",
     "styled-components": "^5.2.0",
     "use-dark-mode": "^2.3.1",
     "yup": "^0.29.3"
