--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -62,6 +62,7 @@
     "next-seo": "^4.7.3",
     "next-translate": "^0.17.2-canary.6",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-avatar": "^3.9.7",
     "react-blurhash": "^0.1.2",
     "react-chartjs-2": "^2.10.0",
