feat: 🎸 ini chart spark component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^0.1.0",
+    "@types/recharts": "^1.8.15",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -52,7 +53,6 @@
     "@types/styled-components": "^5.1.3",
     "@types/yup": "^0.29.6",
     "blurhash": "^1.1.3",
-    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "emoji-mart": "^3.0.0",
@@ -62,10 +62,8 @@
     "next-seo": "^4.7.3",
     "next-translate": "^0.17.2-canary.6",
     "react": "^16.13.1",
-    "react-apexcharts": "^1.3.7",
     "react-avatar": "^3.9.7",
     "react-blurhash": "^0.1.2",
-    "react-chartjs-2": "^2.10.0",
     "react-color": "^2.18.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
@@ -78,6 +76,7 @@
     "react-scroll": "^1.8.1",
     "react-toggle-dark-mode": "^1.0.2",
     "react-useanimations": "^2.0.5",
+    "recharts": "^1.8.5",
     "recoil": "^0.0.10",
     "stripe": "^8.94.0",
     "styled-components": "^5.2.0",
