--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -36,9 +36,8 @@
       "profile": "https://github.com/forestkoju",
       "contributions": [
         "a11y",
+        "design",
         "ideas",
-        "maintenance",
-        "design"
       ]
     }
   ],
