feat: 🎸 ini next sitemap

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -31,6 +31,7 @@
     "firebase:main": "yarn run main:local && yarn run dev",
     "main": "yarn run main:local && yarn run deploy",
     "main:local": "yarn run swap:main && firebase use main",
+    "postbuild": "next-sitemap",
     "relative-ci": "relative-ci-agent",
     "sentry:release": "sentry-cli releases new -p sentrei ${SENTRY_RELEASE} && sentry-cli releases set-commits --auto ${SENTRY_RELEASE} && sentry-cli releases finalize ${SENTRY_RELEASE} && sentry-cli releases deploys ${SENTRY_RELEASE} new -e ${SENTRY_ENVIRONMENT}",
     "start": "next start",
@@ -61,6 +62,7 @@
     "next-optimized-images": "^3.0.0-canary.10",
     "next-plugin-bundle-stats": "^2.2.0",
     "next-seo": "^4.7.3",
+    "next-sitemap": "^1.2.4",
     "next-translate": "^0.17.2-canary.6",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
