--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -15,8 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0
           ref: ${{ github.head_ref }}
+          fetch-depth: 0
+          submodules: true
       - uses: actions/setup-node@v2.1.1
         with:
           node-version: "14.4.0"
