--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: true
       - uses: actions/setup-node@v2.1.1
         with:
           node-version: "14.4.0"
