--- a/.github/workflows/yarn.yml
+++ b/.github/workflows/yarn.yml
@@ -16,6 +16,7 @@ jobs:
           token: ${{ secrets.ACCESS_TOKEN }}
           ref: ${{ github.head_ref }}
           fetch-depth: 0
+          submodules: true
       - uses: actions/setup-node@v2.1.1
         with:
           node-version: "14.4.0"
