--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sort-package-json:fix": "sort-package-json 'package.json' 'packages/*/package.json'",
     "test": "yarn run depcheck && yarn run lint && yarn run release-test",
     "typescript": "lerna run typescript --stream --scope={@sentrei/common,@sentrei/functions,@sentrei/types,@sentrei/ui,@sentrei/video}",
+    "typescript:build": "lerna run typescript --stream --scope={@sentrei/common,@sentrei/types,@sentrei/ui,@sentrei/video}",
     "typescript:clean": "lerna run clean --stream --scope={@sentrei/common,@sentrei/functions,@sentrei/types,@sentrei/ui,@sentrei/video}",
     "typescript:watch": "nodemon --exec yarn run typescript",
     "unsplash": "yarn run clean && yarn run bootstrap",
