--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/sentrei/sentrei.git"
   },
-  "license": "GPL-3.0-only",
+  "license": "MIT",
   "author": "Shun Kakinoki",
   "workspaces": {
     "packages": [
