--- a/packages/typedoc/package.json
+++ b/packages/typedoc/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/sentrei/sentrei.git",
     "directory": "packages/typedoc"
   },
-  "license": "GPL-3.0-only",
+  "license": "MIT",
   "author": "Shun Kakinoki",
   "scripts": {
     "alpha": "yarn run swap:alpha && firebase use alpha && yarn run deploy",
