perf: ⚡️ ini coverage for functions

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -69,8 +69,8 @@
     "swap:beta:env": "cp beta.env.json env.json",
     "swap:main": "cp main.firebase.json firebase.json",
     "swap:main:env": "cp main.env.json env.json",
-    "test": "firebase emulators:exec --only firestore 'jest --silent && yarn run coverage:rules'",
-    "test:watch": "firebase emulators:exec --only firestore 'jest --watch && yarn run coverage:rules'",
+    "test": "firebase emulators:exec --only firestore 'jest --collect-coverage --silent && yarn run coverage:rules'",
+    "test:watch": "firebase emulators:exec --only firestore 'jest --collect-coverage --watch && yarn run coverage:rules'",
     "tsc": "tsc --p tsconfig.build.json",
     "tscpaths": "tscpaths -p tsconfig.json -s ./src -o ./dist",
     "typescript": "yarn run clean && yarn run tsc && yarn run tscpaths",
