--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -10,6 +10,9 @@
 - name: "frontend"
   color: "a2eeef"
   description: ""
+- name: "idea"
+  color: "ff6d69"
+  description: ""
 - name: "infrastructure"
   color: "008672"
   description: ""
