--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "packages/functions/src/extensions"]
 	path = packages/functions/src/extensions
 	url = https://github.com/firebase/extensions
+	ignore = dirty
