--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,6 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      # - uses: github/codeql-action/init@v1
-      # - uses: github/codeql-action/autobuild@v1
-      # - uses: github/codeql-action/analyze@v1
+      - uses: github/codeql-action/init@v1
+      - uses: github/codeql-action/autobuild@v1
+      - uses: github/codeql-action/analyze@v1
