--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,9 +69,9 @@ jobs:
         run: |
           echo "::set-env name=DIST_TAG::latest"
       - run: |
-          cat <<< $(jq '.private = false' package.json) > package.json && npm publish . --tag $DIST_TAG
+          cat <<< $(jq '.private = false' package.json) > package.json && npm publish . --tag $DIST_TAG || true
           cat <<< $(jq '.private = true' package.json) > package.json
-          git reset --hard --recurse-submodule && yarn run publish:lerna
+          git reset --hard --recurse-submodule && yarn run publish:lerna || true
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - id: release
