--- a/.mergify/config.yml
+++ b/.mergify/config.yml
@@ -2,6 +2,7 @@ pull_request_rules:
   - name: sentrei
     conditions:
       - label=ready-to-merge
+      - label!=packages/functions
       - label!=packages/pioneer
       - label!=packages/typedoc
       - label!=packages/ui
@@ -12,7 +13,7 @@ pull_request_rules:
       merge:
         method: merge
         strict: smart
-  - name: sentrei-auto-pr
+  - name: sentrei-bot
     conditions:
       - author~=^sentrei-bot$
     actions:
