--- a/packages/video/package.json
+++ b/packages/video/package.json
@@ -21,6 +21,8 @@
     "clean:tsbuildinfo": "rimraf tsconfig*tsbuildinfo",
     "jest": "jest --coverage",
     "jest:watch": "jest --watch",
+    "ncu:check": "ncu -p yarn",
+    "ncu:upgrade": "ncu -u -p yarn",
     "test": "yarn run jest",
     "test:watch": "yarn run jest:watch",
     "tsc": "tsc --p tsconfig.build.json",
